[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/test_tube01.obj" type="ArrayMesh" id=1]
[ext_resource path="res://Poppins-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fpstest.tres" type="DynamicFont" id=4]
[ext_resource path="res://figure-08-01-04.jpeg" type="Texture" id=6]
[ext_resource path="res://fpstest.gd" type="Script" id=7]

[sub_resource type="SpatialMaterial" id=1]

[sub_resource type="ProceduralSky" id=2]

[sub_resource type="Environment" id=3]
background_mode = 2
background_sky = SubResource( 2 )
ambient_light_sky_contribution = 0.0

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.32549, 0.921569, 1, 1 )

[sub_resource type="DynamicFont" id=4]
size = 21
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 7 )

[node name="CSGBox" type="CSGBox" parent="."]
transform = Transform( 3.938, 0, 0, 0, 1, 0, 0, 0, 3.938, 0, 3.3, 0 )
use_collision = true
invert_faces = true
width = 4.8
height = 7.56913
depth = 4.2
material = SubResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.77675, 0.629809, -4.41083e-08, -0.170098, 0.209784, 0.962838, 0.606404, -0.747885, 0.27008, 0.16388, 1.9715, 0 )
light_energy = 0.521
shadow_enabled = true
shadow_color = Color( 0.592157, 0.592157, 0.592157, 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="desk" type="Spatial" parent="." groups=["desk1"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0140862, 0.223522, -5.98887 )

[node name="CSGBox" type="CSGBox" parent="desk"]
use_collision = true
width = 7.86141
height = 0.16607

[node name="CSGBox" type="CSGBox" parent="desk/CSGBox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, -0.7, 0 )
use_collision = true
width = 0.564894
height = 1.49708

[node name="CSGBox2" type="CSGBox" parent="desk/CSGBox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.4, -0.7, 0 )
use_collision = true
width = 0.564894
height = 1.49708

[node name="camera2" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 0.856501, 0.516144, 0, -0.516144, 0.856501, -0.28, 1.527, -4.991 )

[node name="Position3D" type="Position3D" parent="camera2"]

[node name="Camera" type="Camera" parent="camera2"]

[node name="station" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.76837e-07 )

[node name="test_tube01" type="MeshInstance" parent="station"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0, 0.350795, -5.98 )
mesh = ExtResource( 1 )
skeleton = NodePath("../..")

[node name="CSGCylinder" type="CSGCylinder" parent="station/test_tube01"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 49.4619, 0 )
radius = 5.67303
height = 80.0534
sides = 64
material = SubResource( 5 )

[node name="stand" type="Spatial" parent="station"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 0.4, -6.4 )

[node name="CSGCombiner" type="CSGCombiner" parent="station/stand"]

[node name="CSGBox" type="CSGBox" parent="station/stand/CSGCombiner"]
width = 0.2
height = 0.1
depth = 0.2

[node name="CSGBox" type="CSGCylinder" parent="station/stand/CSGCombiner/CSGBox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.435248, 0 )
radius = 0.062
height = 0.8

[node name="CSGBox2" type="CSGSphere" parent="station/stand/CSGCombiner/CSGBox/CSGBox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.435828, 0 )
radius = 0.087

[node name="CSGBox" type="CSGBox" parent="station/stand/CSGCombiner/CSGBox/CSGBox/CSGBox2"]
transform = Transform( 0.690062, 0, 0.72375, 0, 1, 0, -0.72375, 0, 0.690062, -0.0885458, 0, 0.110681 )
width = 0.362455
height = 0.0551665
depth = 0.09

[node name="CSGSphere" type="CSGSphere" parent="station/stand/CSGCombiner/CSGBox/CSGBox/CSGBox2/CSGBox"]
transform = Transform( 1, 0, 2.98023e-08, 0, 1, 0, -2.98023e-08, 0, 1, -0.176958, 0, -0.0022006 )
radius = 0.057

[node name="CSGBox" type="CSGBox" parent="station/stand/CSGCombiner/CSGBox/CSGBox/CSGBox2/CSGBox/CSGSphere"]
transform = Transform( 0.6409, 0, 0.767624, 0, 1, 0, -0.767624, 0, 0.6409, -0.0948539, 0, 0.0965133 )
width = 0.20116
height = 0.022
depth = 0.037

[node name="CSGSphere" type="CSGSphere" parent="station/stand/CSGCombiner/CSGBox/CSGBox/CSGBox2/CSGBox/CSGSphere/CSGBox"]
transform = Transform( 1, 0, 1.49012e-08, 0, 1, 0, -1.49012e-08, 0, 1, -0.0972619, 0, 0.00220954 )
radius = 0.029

[node name="CSGBox2" type="CSGBox" parent="station/stand/CSGCombiner/CSGBox/CSGBox/CSGBox2/CSGBox/CSGSphere/CSGBox/CSGSphere"]
transform = Transform( -0.0431136, 0, -0.99907, 0, 1, 0, 0.99907, 0, -0.0431136, 6.7234e-05, 0.00263476, -0.0981238 )
width = 0.20116
height = 0.022
depth = 0.037

[node name="CSGSphere" type="CSGSphere" parent="station/stand/CSGCombiner/CSGBox/CSGBox/CSGBox2/CSGBox/CSGSphere/CSGBox/CSGSphere/CSGBox2"]
transform = Transform( 1, 0, 1.49012e-08, 0, 1, 0, -1.49012e-08, 0, 1, -0.0972619, 0, 0.00220954 )
radius = 0.029

[node name="CSGBox2" type="CSGBox" parent="station/stand/CSGCombiner/CSGBox/CSGBox/CSGBox2/CSGBox/CSGSphere"]
transform = Transform( 0.558094, -5.66953e-08, 0.829778, -8.68598e-08, -1, -9.90559e-09, 0.829778, -6.65461e-08, -0.558094, -0.0802803, 0, -0.110549 )
width = 0.20116
height = 0.022
depth = 0.037

[node name="CSGSphere" type="CSGSphere" parent="station/stand/CSGCombiner/CSGBox/CSGBox/CSGBox2/CSGBox/CSGSphere/CSGBox2"]
transform = Transform( 1, 0, 1.49012e-08, 0, 1, 0, -1.49012e-08, 0, 1, -0.0972619, 0, 0.00220954 )
radius = 0.029

[node name="CSGBox2" type="CSGBox" parent="station/stand/CSGCombiner/CSGBox/CSGBox/CSGBox2/CSGBox/CSGSphere/CSGBox2/CSGSphere"]
transform = Transform( -0.0431136, 0, -0.99907, 0, 1, 0, 0.99907, 0, -0.0431136, 6.7234e-05, 0.00263476, -0.0981238 )
width = 0.20116
height = 0.022
depth = 0.037

[node name="CSGSphere" type="CSGSphere" parent="station/stand/CSGCombiner/CSGBox/CSGBox/CSGBox2/CSGBox/CSGSphere/CSGBox2/CSGSphere/CSGBox2"]
transform = Transform( 1, 0, 1.49012e-08, 0, 1, 0, -1.49012e-08, 0, 1, -0.0972619, 0, 0.00220954 )
radius = 0.029

[node name="Control" type="Control" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="ColorRect" type="ColorRect" parent="Control"]
margin_right = 616.0
margin_bottom = 1080.0
color = Color( 0.760784, 0.890196, 0.756863, 1 )

[node name="Label" type="Label" parent="Control"]
margin_right = 616.0
margin_bottom = 72.0
rect_pivot_offset = Vector2( 191, 87 )
custom_fonts/font = ExtResource( 4 )
text = "Photosynthesis"
align = 1
valign = 1

[node name="Figure-08-01-04" type="Sprite" parent="Control"]
position = Vector2( 310, 334 )
scale = Vector2( 0.90625, 0.90625 )
texture = ExtResource( 6 )

[node name="Light" type="Control" parent="Control"]
margin_top = 72.0
margin_right = 445.0
margin_bottom = 127.0

[node name="Lightslider" type="HSlider" parent="Control/Light"]
margin_left = 162.0
margin_top = 9.0
margin_right = 616.0
margin_bottom = 48.0
max_value = 10.0
step = 0.01

[node name="Label" type="Label" parent="Control/Light"]
margin_top = 9.0
margin_right = 162.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 178, 486 )
custom_fonts/font = SubResource( 4 )
text = "Light"
align = 1
valign = 1

[node name="SpotLight" type="SpotLight" parent="Control/Light"]
transform = Transform( 0.194116, -0.785601, 0.587495, 0.674268, 0.541842, 0.501767, -0.712518, 0.298728, 0.634885, 0.904728, 1.47362, -5.31308 )
light_energy = 0.0
spot_angle = 79.1292

[node name="Temp" type="Control" parent="Control"]
margin_top = 135.0
margin_right = 445.0
margin_bottom = 190.0

[node name="Tempslider" type="HSlider" parent="Control/Temp"]
margin_left = 162.0
margin_top = 9.0
margin_right = 616.0
margin_bottom = 48.0
max_value = 10.0
step = 0.01

[node name="Label" type="Label" parent="Control/Temp"]
margin_top = 9.0
margin_right = 162.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 178, 423 )
custom_fonts/font = SubResource( 4 )
text = "Temperature"
align = 1
valign = 1

[node name="Water" type="Control" parent="Control"]
margin_top = 190.0
margin_right = 445.0
margin_bottom = 245.0

[node name="waterslider" type="HSlider" parent="Control/Water"]
margin_left = 162.0
margin_top = 9.0
margin_right = 616.0
margin_bottom = 48.0
max_value = 80.053
step = 0.01

[node name="Label" type="Label" parent="Control/Water"]
margin_top = 9.0
margin_right = 162.0
margin_bottom = 74.0
rect_pivot_offset = Vector2( 178, 368 )
custom_fonts/font = SubResource( 4 )
text = "Water
"
align = 1
valign = 1

[node name="Floats" type="Control" parent="Control"]
margin_left = 2.0
margin_top = 414.0
margin_right = 616.0
margin_bottom = 617.0

[node name="Light" type="Label" parent="Control/Floats"]
margin_left = -2.0
margin_right = 215.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 178, 486 )
custom_fonts/font = SubResource( 4 )
text = "Light"
align = 1
valign = 1

[node name="Light_label" type="Label" parent="Control/Floats/Light"]
margin_left = 82.0
margin_top = 46.0
margin_right = 122.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 4 )
text = "100"

[node name="Temp" type="Label" parent="Control/Floats"]
margin_left = 215.0
margin_right = 387.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 178, 423 )
custom_fonts/font = SubResource( 4 )
text = "Temperature"
align = 1
valign = 1

[node name="temp_label" type="Label" parent="Control/Floats/Temp"]
margin_left = 60.0
margin_top = 48.0
margin_right = 118.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 4 )
text = "100"

[node name="water" type="Label" parent="Control/Floats"]
margin_left = 387.0
margin_right = 614.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 178, 368 )
custom_fonts/font = SubResource( 4 )
text = "Water"
align = 1
valign = 1

[node name="Water_label" type="Label" parent="Control/Floats/water"]
margin_left = 87.0
margin_top = 47.0
margin_right = 145.0
margin_bottom = 99.0
custom_fonts/font = ExtResource( 4 )
text = "100"

[connection signal="value_changed" from="Control/Light/Lightslider" to="." method="_on_Lightslider_value_changed"]
[connection signal="value_changed" from="Control/Temp/Tempslider" to="." method="_on_Tempslider_value_changed"]
[connection signal="value_changed" from="Control/Water/waterslider" to="." method="_on_waterslider_value_changed"]
